[package]
name = "tiny-parse"
version = "0.1.0"
edition = "2021"

[lib]
name = "tinyparse"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
log = "0.4.19"
serde = {version="1.0.171", features = ["derive"]}
serde_json = "1.0.100"

[dev-dependencies]
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"